--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@prisma/client": "^4.1.1",
     "dotenv": "^16.0.1",
     "nodemon": "^2.0.19",
-    "prisma": "^4.1.1"
+    "prisma": "^4.1.1",
+    "swagger-jsdoc": "^6.2.2",
+    "swagger-ui-express": "^4.5.0"
   }
 }
