--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "test": "jest --watchAll",
+    "coverage": "jest --coverage --watchAll"
   },
   "repository": {
     "type": "git",
@@ -23,10 +25,15 @@
     "express": "^4.18.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
     "@prisma/client": "^4.1.1",
+    "babel-jest": "^28.1.3",
     "dotenv": "^16.0.1",
+    "jest": "^28.1.3",
     "nodemon": "^2.0.19",
     "prisma": "^4.1.1",
+    "supertest": "^6.2.4",
     "swagger-jsdoc": "^6.2.2",
     "swagger-ui-express": "^4.5.0"
   }
